--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CodingTest</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="spam_detection">Auto Spam Detection</string>
+    <string name="auto_sync">Auto Sync</string>
+    <string name="auto_cache_clear">Auto Cache Clear</string>
 </resources>
